SERVER-64509 Fix ShardRegistry threadpool shutdown order

(cherry picked from commit 077b55e6330264b262d87d296a7f7006fece669e)
(cherry picked from commit 6a1b4f309d741385eb49b1f87ebe94a2781c1411)